# pico-framework

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_old.txt  CONFIGURATION.md  CONTRIBUTING.md  LICENSE.md  PicoFramework_Feature_Checklist.html  PicoFramework_Feature_Checklist.md  Prelaunch_Review_plan.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  app.cpp  app.h  debug.txt  memmap_lfs_fragment.ld  pico_framework_v1_checklist.md  rp2350-dbgkey-secure.cfg  run_http_tests.sh
examples/minimal/: CMakeLists.txt
examples/minimal/src/: app.cpp  app.h  app_simple.cpp  main.cpp
examples/minimum/: CMakeLists.txt  memmap_lfs_fragment_rp2350.ld
examples/minimum/src/: App.h  app.cpp
examples/ping_pong/: CMakeLists.txt  memmap_lfs_fragment_rp2040.ld  memmap_lfs_fragment_rp2350.ld
examples/ping_pong/html/: pingpong.html
examples/ping_pong/src/: App.cpp  App.h  PingPongController.cpp  PingPongController.h  main.cpp
examples/storage_manager/: CMakeLists.txt  README.md
examples/storage_manager/src/: App.cpp  App.h  FileStorage.cpp  FileStorage.h  FileStorage_html.h  StorageController.cpp  StorageController.h  main.cpp
framework/: CMakeLists.txt  CMakeLists_old.txt  Doxyfile  custom.css  customdoxygen.css  header.html  header_old.html
framework/docs/: PicoFramework Feature Checklist.docx  ~$coFramework Feature Checklist.docx
framework/include/: AppContext.h  ChunkedDecoder.h  DS3231.h  DS3231_old.h  DebugTrace.h  Event.h  EventManager.h  FatFsStorageManager.h  FrameworkApp.h  FrameworkController.h  FrameworkManager.h  FrameworkModel.h  FrameworkNofitication.h  FrameworkNotification.h  FrameworkNotification_unused.h  FrameworkTask.h  FrameworkView.h  FreeRTOSTask.h  GpioEvent.h  GpioEventManager.h  HttpClient.h  HttpClient_old.h  HttpFileserver.h  HttpParser.h  HttpRequest.h  HttpResponse.h  HttpServer.h  JsonRequestHelper.h  JsonResponse.h  JsonService.h  JwtAuthenticator.h  LittleFsStorageManager.h  LittleFsStorageManager_old.h  Logger.h  Middleware.h  MultipartParser.h  Network.h  NtpClient.h  NtpClient_old.h  PasswordHasher.h  (+19 more)
framework/include/events/: Event.h  EventManager.h  GpioEvent.h  GpioEventManager.h  Notification.h  TimerService.h
framework/include/framework/: AppContext.h  FileView.h  FrameworkApp.h  FrameworkController.h  FrameworkManager.h  FrameworkModel.h  FrameworkTask.h  FrameworkView.h  HtmlTemplateView.h  JsonView.h  PasswordHasher.h  StaticView.h  framework_config_system.h
framework/include/http/: ChunkedDecoder.h  HttpClient.h  HttpFileserver.h  HttpParser.h  HttpRequest.h  HttpResponse.h  HttpServer.h  JsonResponse.h  Middleware.h  MultipartParser.h  RouteTypes.h  Router.h  url_utils.h
framework/include/json/: IJsonImpl.h  NlohmannJsonImpl.h  json.h
framework/include/network/: Network.h  Tcp.h  lwip_dns_resolver.h
framework/include/port/: FreeRTOSConfig.h  FreeRTOSConfig_examples.h  FreeRTOSFATConfig.h  lwipopts.h  lwipopts_old.h  mbedtls_config.h
framework/include/storage/: FatFsFileReader.h  FatFsStorageManager.h  LittleFsFileReader.h  LittleFsStorageManager.h  StorageFileReader.h  StorageManager.h
framework/include/time/: DaysOfWeek.h  PicoTime.h  TimeManager.h  TimeOfDay.h  TimeOfDayJson.h  TimerService.h
framework/include/utility/: Logger.h  WithFlag.h  utility.h
framework/lib/: CMakeLists.txt
framework/src/: FrameworkApp.cpp  FrameworkManager.cpp  FrameworkTask.cpp  View.cpp  app.cpp  main.cpp  system_manager.cpp
framework/src/application/: AppContext.cpp  FrameworkApp.cpp  FrameworkController.cpp  FrameworkManager.cpp  FrameworkModel.cpp  FrameworkTask.cpp  FrameworkView.cpp  PasswordHasher.cpp
framework/src/events/: EventManager.cpp  GpioEventManager.cpp  TimerService.cpp  TimerService_old.cpp
framework/src/framework/: AppContext.cpp  FileView.cpp  FrameworkApp.cpp  FrameworkController.cpp  FrameworkManager.cpp  FrameworkModel.cpp  FrameworkTask.cpp  FrameworkView.cpp  HtmlTemplateView.cpp  JsonView.cpp  PasswordHasher.cpp
framework/src/http/: HttpFileserver.cpp  HttpParser.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpServer.cpp  HttpServer_old.cpp  JsonRequestHelper.cpp  JwtAuthenticator.cpp  Middleware.cpp  MultipartParser.cpp  Router.cpp  Router_working.cpp  url_utils.cpp
framework/src/http-client/: ChunkedDecoder.cpp  HttpClient.cpp  HttpClient_before_extension.cpp  HttpClient_last.cpp  http_client.c  http_client.cpp  http_client_util.c
framework/src/http-common/: HttpParser.cpp  HttpRequest.cpp  HttpResponse.cpp  JsonRequestHelper.cpp  JsonResponse.cpp  url_utils.cpp
framework/src/http-server/: HttpFileserver.cpp  HttpServer.cpp  JwtAuthenticator.cpp  Middleware.cpp  MultipartParser.cpp  Router.cpp
framework/src/json/: NlohmannJsonImpl.cpp  json.cpp
framework/src/network/: Network.cpp  NtpClient.cpp  NtpClient_old.cpp  Tcp.cpp  TcpConnectionSocket.cpp  TcpConnectionSocket_old.cpp  lwip_dns_resolver.cpp
framework/src/port/: FreeRTOSTask.cpp  IdleMemory.c  cppMemory.cpp
framework/src/storage/: FatFsFileReader.cpp  FatFsStorageManager.cpp  JsonService.cpp  LittleFsFileReader.cpp  LittleFsStorageManager.cpp  LittleFsStorageManager_new.cpp  LittleFsStorageManager_old.cpp  serializer.cpp  storage_manager.cpp
framework/src/test-app/: DashboardController.cpp  DashboardController.h  DashboardView.cpp  app.cpp  (+9 more)
tests/: CMakeLists.txt  HttpRequest_Test.cpp  HttpResponse_Test.cpp  package-lock.json  package.json  request-test.js  router-test.js  test.cpp  time_manager.hpp
tests/FatFsStorageManager/: CMakeLists.txt
tests/embedded/: CMakeLists.txt  CMakeLists_old.txt  FatFsStorageManager_Test.cpp  HttpClient_Test.cpp  JsonService_Test.cpp  PasswordHash_Test.cpp  TestRunner.cpp  UtestPlatform.cpp  test_FatFsStorageManager.cpp  test_HttpClient.cpp  test_JsonService.cpp  test_StorageManager.cpp
tests/host/: CMakeLists.txt  HttpRequest_Test.cpp  HttpResponse_Test.cpp  host-toolchain.cmake
tests/lib/: CMakeLists.txt  build_cpputest_pico.cmake  make_arm.sh
tests/mocks/: FreeRTOS.h  MockTcpConnection.cpp  ff_utils.h  mem_redefines.h  semphr.h
tools/mkfs_littlefs/: CMakeLists.txt  mkfs_littlefs.cpp
(+180 files in other folders)
